--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
     <link rel="stylesheet"   href="style.css">
     <title>The Food Vault</title>
+
+    <!-- Keep side-nav closed on window load -->
+    <script>
+      window.onload = function() {
+        closeChatArea();
+      }
+    </script>
   </head>
 
   <body>
@@ -15,7 +22,7 @@
 
       
       <!-- Side Nav Chat-area -->
-      <div id="chatbot-area" class="side-nav">
+      <div id="chatbot-area" class="side-nav collapsed">
         <a href="javascript:void(0)" class="closebutton" onclick="closeChatArea()">&times;</a>
         <iframe id="annabot-iframe" src="https://tfv-annabot.herokuapp.com/s/chat" frameborder="1" width="90%" height="90%"></iframe>
       </div>
@@ -97,23 +104,14 @@
     <script>
 
       function openChatArea() {
+        document.getElementById("chatbot-area").classList.remove("collapsed");
         document.getElementById("chatbot-area").style.width = "390px";
         document.getElementById("page-content").style.marginLeft = "510px";
-        $(document).ready(function() {
-          $("#side-nav").css("position", "fixed");
-          $("body").css("overflow", "hidden");
-          $("#fixed-button").css("display", "none");
-        });
       }
 
       function closeChatArea() {
         document.getElementById("chatbot-area").style.width = "0";
         document.getElementById("page-content").style.marginLeft = "0";
-        $(document).ready(function() {
-          $("#side-nav").css("position", "relative");
-          $("body").css("overflow", "scroll");
-          $("#fixed-button").css("display", "block");
-        });
       }
 
     </script>
