--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -44,7 +44,7 @@
       <!-- Side Nav Chat-area -->
       <div id="chatbot-area" class="side-nav collapsed">
         <a href="javascript:void(0)" class="closebutton" onclick="closeChatArea()">&times;</a>
-        <!-- <iframe id="annabot-iframe" src="https://tfv-annabot.herokuapp.com/s/chat" frameborder="1" width="90%" height="90%"></iframe> -->
+        <iframe id="annabot-iframe" src="https://tfv-annabot.herokuapp.com/s/chat" frameborder="1" width="90%" height="90%"></iframe>
       </div>
       
       <!-- Main page content goes here -->
