--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
           <hr>
         </section>
       </div>
+      <br><br><hr>
+      
     </main>
 
     <!-- Button to Expand Chat-area -->
@@ -81,24 +83,24 @@
     <!-- Footer -->
     <footer>
       <div class="horizontal-container">
-          <br><br><hr>
-          <p>Find Us @</p>
-          <div class="vertical-container" style="width: 170px;">
-            <a href="https://www.instagram.com/thefoodvault">
-              <img src="images/instagram.png" alt="Instagram" width="30" height="30">
-            </a>
-            <a href="https://www.twitter.com/thefoodvault">
-              <img src="images/twitter.png" alt="Twitter" width="30" height="30">
-            </a>
-          </div>
-          <div id="trademark">
-            </p>
-            <p>
-              &copy; The Food Vault by Team Kil-A-Bytes
-            </p>
-          </div>
+        <p>Find Us @</p>
+        <div class="vertical-container" style="width: fit-content;">
+          <a href="https://www.instagram.com/thefoodvault">
+            <img src="/images/instagram.png" alt="Instagram" width="30" height="30">
+          </a>
+          <a href="https://www.twitter.com/thefoodvault">
+            <img src="/images/twitter.png" alt="Twitter" width="30" height="30">
+          </a>
         </div>
-    </footer>
+        <div id="trademark">
+          </p>
+          <p>
+            &copy; The Food Vault by Team Kil-A-Bytes
+          </p>
+        </div>
+      </div>
+  </footer>
+  <br>
 
     <!-- Side nav controls -->
     <script>
