--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -123,6 +123,7 @@
             </fieldset>
           </section>
         </div>
+        <br><br><hr>
 
     </main>
 
@@ -131,25 +132,25 @@
   
     <!-- Footer -->
     <footer>
-      <br><br><hr>
-        <div class="horizontal-container">
-          <p>Find Us @</p>
-          <div class="vertical-container" style="width: 170px;">
-            <a href="https://www.instagram.com/thefoodvault">
-              <img src="images/instagram.png" alt="Instagram" width="30" height="30">
-            </a>
-            <a href="https://www.twitter.com/thefoodvault">
-              <img src="images/twitter.png" alt="Twitter" width="30" height="30">
-            </a>
-          </div>
-          <div id="trademark">
-            </p>
-            <p>
-              &copy; The Food Vault by Team Kil-A-Bytes
-            </p>
-          </div>
+      <div class="horizontal-container">
+        <p>Find Us @</p>
+        <div class="vertical-container" style="width: fit-content;">
+          <a href="https://www.instagram.com/thefoodvault">
+            <img src="/images/instagram.png" alt="Instagram" width="30" height="30">
+          </a>
+          <a href="https://www.twitter.com/thefoodvault">
+            <img src="/images/twitter.png" alt="Twitter" width="30" height="30">
+          </a>
         </div>
-    </footer>
+        <div id="trademark">
+          </p>
+          <p>
+            &copy; The Food Vault by Team Kil-A-Bytes
+          </p>
+        </div>
+      </div>
+  </footer>
+  <br>
 
     <!-- Side nav controls -->
     <script>
