fixed all page routing

--- a/template.html
+++ b/template.html
@@ -13,6 +13,6 @@
     <!-- Connect Vue.js Application here -->
     <div id="app"></div>
 
-    <script src="../app.js"></script>
+    <script src="/app.js"></script>
   </body>
 </html>
