--- a/catalogue.html
+++ b/catalogue.html
@@ -5,7 +5,7 @@
     <meta name="viewport"    content="width=device-width, initial-scale=1.0" />
     <meta name="author"      content="Team Kil-A-Bytes">
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
-    <link rel="stylesheet"   href="../style.css">
+    <link rel="stylesheet"   href="/style.css">
     <title>Catalogue</title>
     <style>
       fieldset {
@@ -148,9 +148,9 @@
         <!-- Main Navigation bar for top of page -->
         <nav id="main-nav-bar" class="nav-bar">
           <ul class="links-container">
-            <a href="../index.html"><button>Home</button></a>
-            <a href="../testimonials/testimonials.html"><button>Testimonials</button></a>
-            <a href="../catalogue/catalogue.html"><button class="selected">Catalogue</button></a>
+            <a href="/index.html"><button>Home</button></a>
+            <a href="/testimonials.html"><button>Testimonials</button></a>
+            <a href="/catalogue.html"><button class="selected">Catalogue</button></a>
           </ul>
         </nav>
 
@@ -166,7 +166,7 @@
                 <label>Choose a cuisine/style:</label>
                 <br>
                 <select id="cuisine-selections" class="selection-list">
-                  <option value="undecided">Any</option>
+                  <option value="all">Any</option>
                 </select>
                 <br><br>
 
@@ -180,7 +180,7 @@
                 <label>Choose a rating:</label>
                 <br>
                 <select id="rating-selections" class="selection-list">
-                  <option value="rating">Any</option>
+                  <option value="all">Any</option>
                 </select>
                 <br><br>
                 <input id="submit-form-button" type="button" value="Show Me Places!" onclick="getRestaurantListing()">
@@ -239,16 +239,11 @@
       }
 
       function getRestaurantListing() {
-        var area = document.getElementById("area-selections").value;
         var cuisine = document.getElementById("cuisine-selections").value;
-        var rating = document.getElementById("rating-selections").value;
+        var area    = document.getElementById("area-selections").value;
+        var rating  = document.getElementById("rating-selections").value;
 
-        if (cuisine == "undecided") {
-          cuisine = "";
-        }
-        if (rating == "rating") {
-          rating = "";
-        }
+        console.log(cuisine, area, rating);
       }
     </script>
 
