--- a/testimonials.html
+++ b/testimonials.html
@@ -5,7 +5,7 @@
     <meta name="viewport"    content="width=device-width, initial-scale=1.0" />
     <meta name="author"      content="Team Kil-A-Bytes">
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
-    <link rel="stylesheet"   href="../style.css">
+    <link rel="stylesheet"   href="/style.css">
     <title>Testimonials</title>
 
     <!-- Keep side-nav closed on window load -->
@@ -53,9 +53,9 @@
         <!-- Main Navigation bar for top of page -->
         <nav id="main-nav-bar" class="nav-bar">
           <ul class="links-container">
-            <a href="../index.html"><button>Home</button></a>
-            <a href="../testimonials/testimonials.html"><button class="selected">Testimonials</button></a>
-            <a href="../catalogue/catalogue.html"><button>Catalogue</button></a>
+            <a href="/index.html"><button>Home</button></a>
+            <a href="/testimonials.html"><button class="selected">Testimonials</button></a>
+            <a href="/catalogue.html"><button>Catalogue</button></a>
           </ul>
         </nav>
 
