--- a/catalogue.html
+++ b/catalogue.html
@@ -137,9 +137,9 @@
         <!-- Main Navigation bar for top of page -->
         <nav id="main-nav-bar" class="nav-bar">
           <ul class="links-container">
-            <a href="/index.html"><button>Home</button></a>
-            <a href="/testimonials.html"><button>Testimonials</button></a>
-            <a href="/catalogue.html"><button class="selected">Catalogue</button></a>
+            <a href="index.html"><button>Home</button></a>
+            <a href="testimonials.html"><button>Testimonials</button></a>
+            <a href="catalogue.html"><button class="selected">Catalogue</button></a>
           </ul>
         </nav>
 
