--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <!-- Main Navigation bar for top of page -->
         <nav id="main-nav-bar" class="nav-bar">
           <ul class="links-container">
-            <a href="/index.html"><button class="selected">Home</button></a>
-            <a href="/testimonials.html"><button>Testimonials</button></a>
-            <a href="/catalogue.html"><button>Catalogue</button></a>
+            <a href="index.html"><button class="selected">Home</button></a>
+            <a href="testimonials.html"><button>Testimonials</button></a>
+            <a href="catalogue.html"><button>Catalogue</button></a>
           </ul>
         </nav>
 
