--- a/catalogue.html
+++ b/catalogue.html
@@ -42,7 +42,6 @@
         padding: "20px";
       }
     </style>
-
     <script>
       // global variables
       let auth = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6Imtlc2hhbm1vb3NhaUBnbWFpbC5jb20iLCJmaXJzdG5hbWUiOm51bGwsImxhc3RuYW1lIjpudWxsLCJpZCI6MSwicm9sZXMiOiJ1c2VyIiwiaWF0IjoxNjQ5NDc4NTA4fQ.niRMnlB_nSOMK0DeHuutpxwCwgvyvrGjzXewdytAwAI';
@@ -197,10 +196,10 @@
           <p>Find Us @</p>
           <div class="vertical-container" style="width: fit-content;">
             <a href="https://www.instagram.com/thefoodvault">
-              <img src="/images/instagram.png" alt="Instagram" width="30" height="30">
+              <img src="images/instagram.png" alt="Instagram" width="30" height="30">
             </a>
             <a href="https://www.twitter.com/thefoodvault">
-              <img src="/images/twitter.png" alt="Twitter" width="30" height="30">
+              <img src="images/twitter.png" alt="Twitter" width="30" height="30">
             </a>
           </div>
           <div id="trademark">
