--- a/testimonials.html
+++ b/testimonials.html
@@ -7,13 +7,6 @@
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
     <link rel="stylesheet"   href="style.css">
     <title>Testimonials</title>
-
-    <!-- Keep side-nav closed on window load -->
-    <script>
-      window.onload = function() {
-        closeChatArea();
-      }
-    </script>
     <style>
       .horizontal-card {
         background-color: white;
@@ -136,10 +129,10 @@
         <p>Find Us @</p>
         <div class="vertical-container" style="width: fit-content;">
           <a href="https://www.instagram.com/thefoodvault">
-            <img src="/images/instagram.png" alt="Instagram" width="30" height="30">
+            <img src="images/instagram.png" alt="Instagram" width="30" height="30">
           </a>
           <a href="https://www.twitter.com/thefoodvault">
-            <img src="/images/twitter.png" alt="Twitter" width="30" height="30">
+            <img src="images/twitter.png" alt="Twitter" width="30" height="30">
           </a>
         </div>
         <div id="trademark">
