--- a/catalogue.html
+++ b/catalogue.html
@@ -5,7 +5,7 @@
     <meta name="viewport"    content="width=device-width, initial-scale=1.0" />
     <meta name="author"      content="Team Kil-A-Bytes">
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
-    <link rel="stylesheet"   href="style.css">
+    <link rel="stylesheet"   href="/style.css">
     <title>Catalogue</title>
     <style>
       fieldset {
