captain, we have a modal

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="trending-today">
           <h2><b>See Which Places Are Trending Today</b></h2>
           <hr><br>
-          <div class="vertical-container">
+          <div class="vertical-container" style="width: 100%;">
             <div class="vertical-card">
               <img src="https://picsum.photos/150" alt="">
               <h3>Burger</h3>
@@ -71,7 +71,7 @@
     </main>
 
     <!-- Button to Expand Chat-area -->
-    <button id="fixed-button" onclick="openChatArea()">Expand Chat</button>
+    <button id="fixed-button" onclick="openChatArea()">Expand<br>Chat</button>
     
     <!-- Footer -->
     <footer>
@@ -94,21 +94,7 @@
   </footer>
   <br>
 
-    <!-- Side nav controls -->
-    <script>
-
-      function openChatArea() {
-        document.getElementById("chatbot-area").classList.remove("collapsed");
-        document.getElementById("chatbot-area").style.width = "390px";
-        document.getElementById("page-content").style.marginLeft = "510px";
-      }
-
-      function closeChatArea() {
-        document.getElementById("chatbot-area").style.width = "0";
-        document.getElementById("page-content").style.marginLeft = "0";
-      }
-
-    </script>
+  <script src="index.js"></script>
   </body>
   
 
