fixed catalogue js issues

--- a/catalogue.html
+++ b/catalogue.html
@@ -176,7 +176,7 @@
                 <option value="all">Any</option>
               </select>
               <br><br>
-              <input id="submit-form-button" type="button" value="Show Me Places!" onclick="displayData()">
+              <input id="submit-form-button" type="button" value="Show Me Places!" onclick="displayRestaurantData()">
     
               <p>(You can always search our entire catalogue for all areas by searching from the get-go!)</p>
             </form>
