call data after DOM loads

--- a/catalogue.html
+++ b/catalogue.html
@@ -95,8 +95,7 @@
         }
       }
 
-      // get data after page finishes loading
-      document.readyState === 'complete' ? populateObjects() : window.addEventListener('load', populateObjects);
+      document.addEventListener('DOMContentLoaded', populateObjects);
     </script>
   </head>
   
