added modal container

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         </section>
       </div>
       <br><br><hr>
+
+      <!-- Modal Container for Pop-ups -->
+      <div id="restaurant-modal-container" class="modal"></div>
       
     </main>
 
