--- a/testimonials.html
+++ b/testimonials.html
@@ -26,6 +26,21 @@
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
         background: linear-gradient(to bottom, #f2f2f2, #fafafa);
       }
+
+      @media screen and (max-width: 600px) {
+        #review {
+          width: 95%;
+          margin: 0 auto;
+        }
+
+        .data-entry-area {
+          width: 200px;
+        }
+
+        textarea.data-entry-area {
+          height: 100px;
+        }
+      }
     </style>
   </head>
 
