major ui overhaul

--- a/catalogue.html
+++ b/catalogue.html
@@ -33,6 +33,11 @@
         min-width: 60px;
       }
 
+      .horizontal-card:hover {
+        cursor: pointer;
+        background-color: #ffffff49;
+      }
+
       #restaurant-listing {
         flex-wrap: wrap; 
         justify-content: space-evenly;
