--- a/testimonials.html
+++ b/testimonials.html
@@ -125,7 +125,7 @@
                   <textarea name="comment" class="data-entry-area"></textarea>
                   <br><br>
                   
-                  <input type="button" class="data-entry-area" value="Submit Review">
+                  <input type="button" class="data-entry-area" value="Submit Review" style="background: #333; color: white; border: 0px;">
                   <p style="padding-top: 12px;">Tip: You can leave the "Name" field blank if you wish to be anonymous.</p>
               </form>
             </fieldset>
