--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
         <br>
 
         <!-- Trending section -->
-        <section id="trending" style="background-color: white; border-radius: 15px;">
+        <section id="trending">
           <br>
           <h2><b>See Which Places Are Trending</b></h2>
           <hr><br>
           <div id="trending-container" class="vertical-container" style="width: 100%;"></div>
-          <hr>
+          <br>
         </section>
 
-        <br><br>
+        <br><br><br>
 
         <!-- Special Credits -->
-        <section id="credits" style="background-color: white; border-radius: 15px;">
+        <section id="credits">
           <br>
           <h2><b>Made With Love By Team Kil-A-Bytes</b></h2>
           <hr><br>
@@ -120,9 +120,8 @@
                 <h3>JS Implementation</h3>
               </div>
             </div>
-
           </div>
-          <br><hr>
+          <br>
         </section>
 
       </div>
