--- a/testimonials.html
+++ b/testimonials.html
@@ -60,13 +60,15 @@
       <div id="page-content" style="margin: 0;">
         
         <!-- Main Navigation bar for top of page -->
-        <nav id="main-nav-bar" class="nav-bar">
-          <ul class="links-container">
-            <a href="index.html"><button>Home</button></a>
-            <a href="testimonials.html"><button class="selected">Testimonials</button></a>
-            <a href="catalogue.html"><button>Catalogue</button></a>
-          </ul>
-        </nav>
+        <div style="justify-content: center;">
+          <nav id="main-nav-bar" class="nav-bar">
+            <ul class="links-container">
+              <a href="index.html"><button >Home</button></a>
+              <a href="testimonials.html"><button class="selected">Testimonials</button></a>
+              <a href="catalogue.html"><button>Catalogue</button></a>
+            </ul>
+          </nav>
+        </div>
 
         <br><br>
         
