--- a/catalogue.html
+++ b/catalogue.html
@@ -152,13 +152,15 @@
       <div id="page-content">
         
         <!-- Main Navigation bar for top of page -->
-        <nav id="main-nav-bar" class="nav-bar">
-          <ul class="links-container">
-            <a href="index.html"><button>Home</button></a>
-            <a href="testimonials.html"><button>Testimonials</button></a>
-            <a href="catalogue.html"><button class="selected">Catalogue</button></a>
-          </ul>
-        </nav>
+        <div style="justify-content: center;">
+          <nav id="main-nav-bar" class="nav-bar">
+            <ul class="links-container">
+              <a href="index.html"><button>Home</button></a>
+              <a href="testimonials.html"><button>Testimonials</button></a>
+              <a href="catalogue.html"><button class="selected">Catalogue</button></a>
+            </ul>
+          </nav>
+        </div>
 
         <br><br>
         
