fixed navbar misalignment

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div id="page-content">
 
         <!-- Main Navigation bar for top of page -->
-        <div style="justify-content: center;">
+        <div style="justify-content: center; margin: 0 auto;">
           <nav id="main-nav-bar" class="nav-bar">
             <ul class="links-container">
               <a href="index.html"><button class="selected">Home</button></a>
@@ -109,7 +109,7 @@
         <!-- Special Credits -->
         <section id="credits">
           <br>
-          <h2 style="padding: 10px"><b>Made With Love By Team Kil-A-Bytes</b></h2>
+          <h2 style="padding: 10px"><b>Made With Love From<br>Team Kil-A-Bytes</b></h2>
           <hr><br>
 
           <div id="credits-container" class="horizontal-container" style="width: 70%;">
