--- a/catalogue.html
+++ b/catalogue.html
@@ -152,7 +152,7 @@
       <div id="page-content">
         
         <!-- Main Navigation bar for top of page -->
-        <div style="justify-content: center;">
+        <div style="justify-content: center; margin: 0 auto;">
           <nav id="main-nav-bar" class="nav-bar">
             <ul class="links-container">
               <a href="index.html"><button>Home</button></a>
