--- a/testimonials.html
+++ b/testimonials.html
@@ -41,6 +41,13 @@
         textarea {
           height: 100px;
         }
+
+        @media screen and (max-width: 600px) {
+          #review-form-outline {
+            width: 80%;
+            margin: 0 auto;
+          }
+        }
       }
     </style>
   </head>
@@ -60,7 +67,7 @@
       <div id="page-content" style="margin: 0;">
         
         <!-- Main Navigation bar for top of page -->
-        <div style="justify-content: center;">
+        <div style="justify-content: center; margin: 0 auto;">
           <nav id="main-nav-bar" class="nav-bar">
             <ul class="links-container">
               <a href="index.html"><button >Home</button></a>
@@ -77,12 +84,12 @@
           <br>
           <h2><b>See What Our Users Have To Say About Us!</b></h2>
           <hr>
-          <div class="horizontal-container">
+          <div id="testimonials-container" class="horizontal-container">
             <div class="horizontal-card">
               <div class="user-name-comment">
                 <h4>Mary Jane</h4>
                 <span>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore
                 </span>
               </div>
             </div>
@@ -116,26 +123,44 @@
           <h2><b>Have Something To Say About Our Service?</b></h2>
           <hr><br>
           <fieldset id="review-form-outline" style="margin: 0 auto; justify-content: center;">
-            <form id="review">
+            <form id="review" method="post">
+
               <br><br>
-              <legend><h3><b>Let Us Know Your Thoughts!</b></h3></legend>
+              <legend>
+                <h3><b>Let Us Know Your Thoughts!</b></h3>
+              </legend>
               <br>
 
-                <!-- Name Data field -->
-                <label class="label">Name:</label>
-                <br>
-                <input name="Name" class="data-entry-area">
-                <br><br>
+              <!-- Name Data field -->
+              <label class="label">How Do We Call You?</label>
+              <br><br>
+              <input name="Name" class="data-entry-area">
+              <br><br><br>
 
-                <!-- Comment Data field -->
-                <label class="label">Comment:</label>
-                <br> 
-                <textarea name="comment" class="data-entry-area" style="height: 120px;"></textarea>
-                <br><br>
+              <!-- Comment Data field -->
+              <label class="label">What Do You Have To Say About Us?</label>
+              <br><br>
+              <textarea name="comment" class="data-entry-area" style="height: 120px;"></textarea>
+              <br><br><br>
+
+              <!-- Rating field -->
+              <label class="label">How Would You Rate Your Experience With<br><b>The Food Vault</b>?</label>
+              <br><br>
+              <select name="rating" class="data-entry-area">
+                <option value="1">1 - Unsatisfactory</option>
+                <option value="2">2 - Barely Good</option>
+                <option value="3">3 - Average</option>
+                <option value="4">4 - Satisfactory</option>
+                <option value="5">5 - Excellent</option>
+              </select>
+              <br><br><br>
                 
-                <input type="button" class="data-entry-area" value="Submit Review" style="background: #333; color: white; border: 0px;">
-                <p style="padding-top: 12px;">Tip: You can leave the "Name" field blank if you wish to be anonymous.</p>
             </form>
+
+            <!-- Submit button -->
+            <button type="submit" class="data-entry-area" style="font-size: 12px;" form="review">Submit Review</button>
+            <p style="padding-top: 12px;"><b>TIP</b> - Leave the "Name" field blank if you wish to be anonymous.</p>
+            <p style="font-size: 10px;">(Once you submit, you will not be able to delete your review)</p>
           </fieldset>
           <br>
         </section>
