fixed name margins

--- a/testimonials.html
+++ b/testimonials.html
@@ -183,6 +183,7 @@
           container.classList.add("user-name-comment");
 
           let name = document.createElement("h4");
+          name.style.margin = "0";
           name.innerHTML = review.user;
           container.appendChild(name);
 
