--- a/testimonials.html
+++ b/testimonials.html
@@ -148,11 +148,11 @@
     <footer>
       <div class="horizontal-container">
         <p>Find Us @</p>
-        <div class="vertical-container" style="width: fit-content;">
-          <a href="https://www.instagram.com/thefoodvault">
-            <img src="images/instagram.png" alt="Instagram" width="30" height="30">
+        <div class="vertical-container">
+          <a href="https://www.instagram.com/thefoodvault" style="margin-right: 7px;">
+            <img src="images/instagram.png" alt="Instagram" width="30" height="30" >
           </a>
-          <a href="https://www.twitter.com/thefoodvault">
+          <a href="https://www.twitter.com/thefoodvault" style="margin-left: 7px;">
             <img src="images/twitter.png" alt="Twitter" width="30" height="30">
           </a>
         </div>
@@ -162,11 +162,11 @@
           </p>
         </div>
       </div>
-  </footer>
-  <br>
+    </footer>
+    <br>
 
-  <script src="index.js"></script>
-  <script>
+    <script src="index.js"></script>
+    <script>
     let testimonials = document.getElementById("testimonials-container");
     let form = document.getElementById("review");
 
@@ -236,6 +236,6 @@
     // Event listeners
     window.addEventListener("load", populateTestimonials);
     form.addEventListener("submit", formProcessing);
-  </script>
+    </script>
   </body>
 </html>
