--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
     <footer>
       <div class="horizontal-container">
         <p>Find Us @</p>
-        <div class="vertical-container" style="width: fit-content;">
-          <a href="https://www.instagram.com/thefoodvault">
-            <img src="images/instagram.png" alt="Instagram" width="30" height="30">
+        <div class="vertical-container">
+          <a href="https://www.instagram.com/thefoodvault" style="margin-right: 7px;">
+            <img src="images/instagram.png" alt="Instagram" width="30" height="30" >
           </a>
-          <a href="https://www.twitter.com/thefoodvault">
+          <a href="https://www.twitter.com/thefoodvault" style="margin-left: 7px;">
             <img src="images/twitter.png" alt="Twitter" width="30" height="30">
           </a>
         </div>
@@ -185,16 +185,16 @@
           </p>
         </div>
       </div>
-  </footer>
-  <br>
+    </footer>
+    <br>
 
-  <script src="index.js"></script>
-  <script>
-    // Initialize the trending section after the page loads
-    window.onload = function() {
-      generateTrending();
-    }
-  </script>
+    <script src="index.js"></script>
+    <script>
+      // Initialize the trending section after the page loads
+      window.onload = function() {
+        generateTrending();
+      }
+    </script>
   </body>
   
 
